fixed paragraph margins, abandoned blurred edge attempt

--- a/Main.css
+++ b/Main.css
@@ -290,8 +290,8 @@ html, body {
   font-family: 'Noto Serif SC', serif;
 }
 .about p {
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-right: 25%;
+    margin-left: 25%;
     text-align: justify;
     -moz-text-align-last: center;
     text-align-last: center;
@@ -309,6 +309,5 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     object-fit: cover;
-    background: black;
-    box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;;
+
 }
